# semantigram

./: .gitignore  Makefile  README.md  binary_data.csv  binarytree-prototype.html  data.csv  index.html  interactive-highlight.js  main.css  main.py  test.html  websocket-client.js
model_generation/: Cargo.toml
model_generation/src/: main.rs
model_generation/templates/: alpha.html  base.html  table.html
model_generation/templates/partials/: binary-table.html  table.html
model_generation/templates/partials/binary/: binary-table.html  binary_tree_html_nested_list.html
websocket-server/: Cargo.toml
websocket-server/src/: main.rs
